Fix search icon position on mobiles

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1861,9 +1861,6 @@ table {
   --search-icon-width: .9em;
   padding-right: calc(var(--search-icon-width) + 6px) !important;
   overflow: visible; }
-  @media not screen and (min-width: 1000px) {
-    .is-search-button:not(.no-icon) a {
-      padding-right: calc(var(--search-icon-width) + 6px + 1em) !important; } }
   .is-search-button:not(.no-icon) a:after {
     content: '';
     position: absolute;
